Update Dockerfile added apt-get tool installs

--- a/helloworld/Dockerfile
+++ b/helloworld/Dockerfile
@@ -4,5 +4,14 @@ RUN go build -o /helloworld /helloworld.go
 
 # Copy the exe into a smaller base image
 FROM alpine
+
+# Install debug tools
+RUN apt-get update && apt-get -y install mtr \
+nmap \
+netcat \
+dnsutils \
+traceroute \
+apache2-utils 
+
 COPY --from=0 /helloworld /helloworld
 CMD /helloworld
