--- a/helloworld/Dockerfile
+++ b/helloworld/Dockerfile
@@ -20,4 +20,4 @@ nginx
 COPY nginx.conf /etc/nginx/
 
 COPY --from=0 /helloworld /helloworld
-CMD pwd; ls -lha /etc/nginx/; echo; echo "cat nginx.conf"; echo; cat /etc/nginx/nginx.conf; echo; echo "which nginx"; echo; which nginx; ls -lh /etc/nginx/modules-enabled/; ls -lh /etc/nginx/conf.d/; ls -lh /etc/nginx/sites-enabled nginx /helloworld
+CMD pwd; ls -lha /etc/nginx/; echo; echo "cat nginx.conf"; echo; cat /etc/nginx/nginx.conf; echo; echo "which nginx"; echo; which nginx; echo; echo "look at /etc/nginx/modules-enabled"; echo; ls -lh /etc/nginx/modules-enabled/; echo; echo "look at /etc/nginx/conf.d/"; echo; ls -lh /etc/nginx/conf.d/; echo; echo "look at /etc/nginx/sites-enabled"; echo; ls -lh /etc/nginx/sites-enabled; echo; nginx; /helloworld;
